[package]
name = "kitten"
version = "0.1.0"
authors = ["Andy Davis <github@andy-davis.co.uk>", "Matthew Weller <wellm018@gmail.com>", "Kyle Manning <k_manning@live.co.uk>"]
edition = "2018"
description = "Kitten is a light bdd framework for Rust and for those who don't like cucumber - cats don't like cucumbers."
license = "Apache-2.0" 
documentation = "https://github.com/majikandy/kitten"
homepage = "https://github.com/majikandy/kitten"
repository = "https://github.com/majikandy/kitten"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
